<resources>
    <string name="app_name">SetProxy</string>

    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="colon">:</string>
    <string name="clear">Clear</string>
    <string name="set">Set</string>
    <string name="history">History</string>
    <string name="no_history">No history</string>

    <string name="required">Required</string>
    <string name="host_error_empty">@string/required</string>
    <string name="port_error_empty">@string/required</string>
    <string name="port_error_number">Digits only</string>

    <string name="not_supported">SetProxy may not work with your version of Android!</string>
    <string name="set_proxy_failed">Unable to set proxy</string>
    <string name="clear_proxy_failed">Unable to clear proxy</string>
</resources>
