<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="thevoiceless.setproxy.activities.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="15dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/host_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColorHint="@color/hint"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/host_input"
                android:theme="@style/WhiteEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/host"
                android:inputType="textUri"
                android:textColor="@android:color/white"
                android:gravity="center_horizontal"
                android:imeOptions="actionNext|flagNoExtractUi"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:textColor="@color/hint"
            android:text="@string/colon"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/port_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColorHint="@color/hint"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/port_input"
                android:theme="@style/WhiteEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/port"
                android:inputType="number"
                android:digits="1234567890"
                android:textColor="@android:color/white"
                android:gravity="center_horizontal"
                android:imeOptions="flagNoExtractUi"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/clear_save_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible"
        android:src="@drawable/save"
        app:backgroundTint="@color/fun_green"
        tools:visibility="visible"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:paddingLeft="16dp"
        android:paddingBottom="8dp"
        android:text="@string/history"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <thevoiceless.setproxy.views.ProxyConfigurationsRecyclerView
            android:id="@+id/proxies_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/proxies_list_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white_0.5_alpha"
            android:text="@string/no_history"
            android:visibility="gone"/>

    </FrameLayout>

</LinearLayout>
